--- a/package.json
+++ b/package.json
@@ -80,4 +80,7 @@
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1"
   }
+"scripts": {
+  "build": "tsc",  // Сборка проекта TypeScript
+  "start": "node dist/app.js"  // Запуск проекта после сборки
 }
