--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+	"start": "node dist/app.js"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
@@ -79,8 +80,4 @@
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1"
-  },
-"scripts": {
-  "build": "tsc",  // Сборка проекта TypeScript
-  "start": "node dist/app.js"  // Запуск проекта после сборки
-}
+  }
